Fix hero padding on mobile

--- a/style.css
+++ b/style.css
@@ -773,7 +773,7 @@ html[lang="uk"] body.home-page #hero-btn {
   }
 
   body.home-page .hero-content {
-    padding: 80px 16px 44px;
+    padding: 140px 16px 44px;
   }
 
   body.home-page #hero-btn {
